--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,10 +1,20 @@
 <ion-header>
   <ion-navbar>
     <ion-title>Meu Leitor de Feed</ion-title>
+    <ion-buttons end>
+      <button ion-button icon-only (click)="showFilters()">
+        <ion-icon name="funnel" [style.color]="hasFilter ? 'orange' : 'inherit'"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 </ion-header>
-
 <ion-content>
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content 
+        pullingIcon="arrow-dropdown" 
+        pullingText="Puxe para atualizar" refreshingSpinner="circles" refreshingText="Atualizando...">
+    </ion-refresher-content>
+  </ion-refresher>
   <ion-list>
     <button ion-item *ngFor="let feed of feeds" (click)="itemSelected(feed.data.url)">
       <ion-avatar item-left>
