--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,8 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>Meu Leitor de Feed</ion-title>
+    <ion-title>Meu Leitor de Feed
+      <ion-searchbar [(ngModel)]="searchTerm" (ionInput)="filterItems()" placeholder="Digite aqui..."> </ion-searchbar>
+    </ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="showFilters()">
         <ion-icon name="funnel" [style.color]="hasFilter ? 'orange' : 'inherit'"></ion-icon>
